--- a/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
@@ -233,16 +233,26 @@ materialDesign:HintAssist.Hint="Result"
 Style="{StaticResource MaterialDesignOutlinedTextBox}"
 Width="250" FontSize="16" Margin="60 0 0 0"/>
                 </StackPanel>
+                   
+                        <StackPanel Orientation="Horizontal" Margin="80 30 0 0">
+                        <StackPanel>
+                            <StackPanel Orientation="Horizontal">
+                                <ComboBox Width="171" 
+           Text="{Binding MedicineChoice}"
+           ItemsSource="{Binding ListMedicine}"
+           DisplayMemberPath="TenThuoc"
+           Style="{StaticResource MaterialDesignOutlinedComboBox}"  FontSize="16"/>
+                                <Button Content="Add" Command="{Binding AddMedicineTolist}"  Margin="10" Foreground="White" />
+                            </StackPanel>
+                        <ComboBox Width="171" HorizontalAlignment="Left"
+           Text="{Binding MedicineChoice}"
+           ItemsSource="{Binding ListMedicine}"
+           DisplayMemberPath="TenThuoc"
+           Style="{StaticResource MaterialDesignOutlinedComboBox}"  FontSize="16"/>
 
-                    <StackPanel Orientation="Horizontal" Margin="80 30 0 0">
-                        
-                        <ComboBox Width="171"
-                                  Text="{Binding MedicineChoice}"
-                                  ItemsSource="{Binding ListMedicine}"
-                                  DisplayMemberPath="TenThuoc"
-                                  Style="{StaticResource MaterialDesignOutlinedComboBox}"  FontSize="16"/>
-
-                        <Button Content="Add" Command="{Binding AddMedicineTolist}"  Margin="10" Foreground="White" />
+                        </StackPanel>
+                       
+                       
                         <Border Margin="60 0 0 0" BorderBrush="Gray" BorderThickness="1" CornerRadius="5">
                             <ListBox
 
@@ -253,6 +263,7 @@ Width="250" FontSize="16" Margin="60 0 0 0"/>
                                
                             </ListBox>
                         </Border>
+                            
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 30 0 0">
 
@@ -267,7 +278,7 @@ Width="560" FontSize="16"
                 TextWrapping="Wrap"/>
 
                     </StackPanel>
-
+                    
                 </StackPanel>
 
 
