--- a/QLPhongMachTuWPF/View/DetailInovice.xaml
+++ b/QLPhongMachTuWPF/View/DetailInovice.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
         mc:Ignorable="d"
-        Title="DetailInovice" Height="880" Width="880"
+        Title="DetailInovice" Height="800" Width="880"
         DataContext="{StaticResource DetailsInvoice}"
         
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewmodel="clr-namespace:QLPhongMachTuWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:DetailsInvoice}"
@@ -134,13 +134,17 @@
                     <DataGrid AutoGenerateColumns="False" HeadersVisibility="Column" 
                   CanUserAddRows="False" IsReadOnly="True" 
                   HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                  Margin="10" x:Name="datagrid" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+                  Margin="10" x:Name="datagrid" 
+                               ItemsSource="{Binding CollectionViewMedicine, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                              HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="#"  Width="0.5*" Binding="{Binding ID}"/>
-                            <DataGridTextColumn Header="MEDICINE"  Width="2*" Binding="{Binding Medicine}"/>
-                            <DataGridTextColumn Header="PRICE"  Width="2*" Binding="{Binding Price}"/>
-                            <DataGridTextColumn Header="UNIT"  Width="2*" Binding="{Binding Unit}"/>
-                            <DataGridTextColumn Header="TOTAL"  Width="2*" Binding="{Binding Total}"/>
+                            <DataGridTextColumn Header="#"   Width="0.5*" Binding="{Binding MaPK}"/>
+                            <DataGridTextColumn Header="MEDICINE"  Width="*" Binding="{Binding MaThuoc}"/>
+                            <DataGridTextColumn Header="PRICE"  Width="*" Binding="{Binding DonGia}"/>
+                           
+                            <DataGridTextColumn Header="QUANTITY"  Width="1.5*" Binding="{Binding SoLuong}"/>
+                            <DataGridTextColumn Header="INSTRUCTION"  Width="*" Binding="{Binding CachDung}"/>
+                            <DataGridTextColumn Header="STATUS"  Width="*" Binding="{Binding TrangThai}"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
