--- a/QLPhongMachTuWPF/View/Staffs.xaml
+++ b/QLPhongMachTuWPF/View/Staffs.xaml
@@ -39,7 +39,13 @@
         </Button>
 
 
-        <DataGrid Grid.Row="1" Background="#eeeeee" SelectedItem ="{Binding SelectedItemCommand}" ItemsSource="{Binding FilteredStaffs}"  ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle2}" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"  RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="staffDatagrid" Margin="0,0,0,10"
+        <DataGrid Grid.Row="1" Background="#eeeeee" SelectedItem ="{Binding SelectedItemCommand}" 
+                  ItemsSource="{Binding FilteredStaffs}" 
+                  ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle2}"
+                  Style="{DynamicResource DataGridStyle1}" 
+                  CellStyle="{DynamicResource DataGridCellStyle1}" 
+                  RowStyle="{DynamicResource DataGridRowStyle1}" 
+                  x:Name="staffDatagrid" Margin="0,0,0,10"
           HorizontalScrollBarVisibility="Disabled" Grid.RowSpan="2" 
     HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
     Width="auto" Height="auto" VerticalScrollBarVisibility="Auto">
