--- a/QLPhongMachTuWPF/View/DetailInovice.xaml
+++ b/QLPhongMachTuWPF/View/DetailInovice.xaml
@@ -114,15 +114,19 @@
 
                 </StackPanel>
                     </StackPanel>
+              
                     
-                    <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="auto" Height="auto" Margin="0 -100 200 0">
+                    <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="auto" Height="auto" Margin="0 -100 150 0">
                         <TextBlock Text= "INVOICE CODE:" Foreground="Black" Style="{StaticResource titleTextDateAndInvoice}" HorizontalAlignment="Left" Margin="10" FontSize="14"/>
                         <TextBlock Text="INVOICE DATE:" Style="{StaticResource textDateAndInvoice}" HorizontalAlignment="Left" Margin="10 0 0 0" FontSize="14"/>
 
                     </StackPanel>
 
                     <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="auto" Height="auto" Margin="0 -100 50 0">
-                            <TextBlock Text="{Binding ID, Mode=TwoWay}" Foreground="Black" Style="{StaticResource titleTextDateAndInvoice}" FontWeight="Normal" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="-10 10" FontSize="14"/>
+                            <TextBlock Text="{Binding ID, Mode=TwoWay}" Foreground="Black" 
+                                       Style="{StaticResource titleTextDateAndInvoice}" FontWeight="Normal"
+                                       VerticalAlignment="Top" HorizontalAlignment="Left" 
+                                       Margin="-10 10" FontSize="14"/>
                             <TextBlock Text="{Binding NgayHoanThanh, Mode=TwoWay}" Style="{StaticResource textDateAndInvoice}" HorizontalAlignment="Left" FontWeight="Normal" Margin="-10 0 0 0" FontSize="14"/>
 
                         </StackPanel>
