--- a/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
@@ -228,13 +228,17 @@ FontSize="16" Margin="60 0 0 0"/>
                         VerticalAlignment="Center"
             materialDesign:HintAssist.Hint="Symptom"
             Style="{StaticResource MaterialDesignOutlinedTextBox}"
-            Width="250" Height="150" FontSize="16"/>
+            Width="250" Height="150" FontSize="16" 
+                        AcceptsReturn="True"
+                        TextWrapping="Wrap"/>
                     <TextBox
                     Text="{Binding Result}"
             VerticalAlignment="Center"
 materialDesign:HintAssist.Hint="Result"
 Style="{StaticResource MaterialDesignOutlinedTextBox}"
-Width="250" Height="150" FontSize="16" Margin="60 0 0 0"/>
+Width="250" Height="150" FontSize="16" Margin="60 0 0 0"
+                         AcceptsReturn="True"
+ TextWrapping="Wrap"/>
                 </StackPanel>
                    
                         <StackPanel Orientation="Horizontal" Margin="80 30 0 0">
