--- a/QLPhongMachTuWPF/View/Lists.xaml
+++ b/QLPhongMachTuWPF/View/Lists.xaml
@@ -79,7 +79,9 @@
 
                                
                                 <Button 
-Style="{StaticResource gridRemoveBtn}" Background="Red" >
+                                     Command="{Binding DataContext.DeleteMedicineCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+    CommandParameter="{Binding}"
+                                    Style="{StaticResource gridRemoveBtn}" Background="Red" >
                                     <materialDesign:PackIcon Kind="TrashCan" Width="20" Height="20" Foreground="White" />
                                 </Button>
                             </StackPanel>
